--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 tagline: Even dead packets can tell tales.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://deadpacketsociety.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://deadpacketsociety.net" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social link
 social:
